# oct-backup

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json
.github/workflows/: release.yml
backup/: Cargo.toml
backup/src/: cmd.rs  global.rs  main.rs  util.rs
backup/src/anchor/: contract_trait.rs  mod.rs
backup/src/backup/: anchor_backup.rs  mod.rs
backup/src/db/: delegator_infos.rs  mod.rs  staking_histories.rs  validator_infos.rs  validator_set.rs
backup/src/near/: mod.rs  types.rs
migrations/: 20220807032557_init.sql  20220820004439_init.sql
src/: cmd.rs  global.rs  main.rs
src/anchor/: types.rs
src/backup/: anchor_backup.rs  mod.rs
src/db/: delegator_infos.rs  staking_histories.rs  validator_infos.rs  validator_set.rs
src/near/: types.rs
