[package]
name = "oct-backup"
version = "0.0.1"
edition = "2021"

[dependencies]
futures = "0.3.5"
tokio = { version = "1.1", features = ["full"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
dotenv = "0.15.0"
anyhow = "1.0"
sea-query = { version = "^0.26", features = ["sqlx-postgres", "with-json", "with-bigdecimal", "with-chrono"] }
sqlx = { version = "^0.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "all-types", "chrono"] }
once_cell = { version = "^1" }
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = "0.4"
itertools = "0.9.0"
hex = "0.4"
base64 = "0.11"
lazy_static="1.4.0"
async-trait="0.1.53"
async_once = "0.2.6"
structopt="0.3.26"

near-jsonrpc-client = "0.3.0"
near-primitives = "0.12.0"
near-jsonrpc-primitives = "0.12.0"
